Fix listing of university spacing on home page.

--- a/frontend/src/components/universities/universities.css
+++ b/frontend/src/components/universities/universities.css
@@ -25,3 +25,7 @@
     width: 60px;
     height: 60px
 }
+
+.text {
+    margin: 0 0 15px;
+}
